[project]
name = "hospital-vuln-mcp"
version = "1.1.3"
description = "Hospital Vulnerability Scanner MCP Server - Security scanning for healthcare systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Hospital Security Team", email = "security@example.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.10.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.10.1",
]
keywords = ["mcp", "vulnerability", "scanner", "hospital", "security", "healthcare", "医疗", "安全", "漏洞扫描"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
hospital-vuln-scanner-mcp = "hospital_vuln_mcp:main"

[project.urls]
Homepage = "https://github.com/12211725-star/hospital-vuln-scanner-mcp"
Repository = "https://github.com/12211725-star/hospital-vuln-scanner-mcp"
Documentation = "https://github.com/12211725-star/hospital-vuln-scanner-mcp/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hospital_vuln_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hospital_vuln_mcp/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
